2013-11-12  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Prepare for release

	* inst/NEWS
	* man/postgresqlBuildTableDefinition.Rd: line length
	* man/postgresqlSupport.Rd: line length

2013-10-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Strange path support for OS X 10.9 Marvericks

	* configure.in
	* configure
	* src/RS-PostgreSQL.c: keep declaration on the top of a block.

2013-08-22  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Memory leak detected by valgrind.

	* src/RS-PostgreSQL.c
	* src/RS-pgsql-copy.c
	* src/RS-pgsql-getResult.c
	* src/RS-pgsql-pqexec.c
	* src/RS-pgsql-pqexecparams.c

2013-06-21  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

        * postgresqlWriteTable: send column names at COPY; 
	* dbWriteTableTest.R: test for append=T

2013-06-12  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Close the socket on failure of opening connection

	* src/RS-PostgreSQL.c

2013-03-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Document synchronization and testoutputs.

	* man/postgresqlSupport.Rd

2013-03-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Change notation of LICENSE in DESCRIPTION upon request from CRAN

	* LICENSE
	* inst/NEWS
	* inst/ANNOUNCEMENTS
	* inst/TODO

2013-03-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Use system libpq library when available on OS X (darwin)

	* src/configure.in
	* src/configure

2012-12-06  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Test implementation of SQL with parameters.

	* R/PostgreSQLSupport.R
	* src/RS-pgsql-pqexecparams.c
	* tests/dbGetQueryParams.R

2012-10-04  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Bug fix for GC related errro as reported as issue 42.

	* src/RS-DBI.c
	* src/RS-PostgreSQL.c 
	* tests/dbColumnInfo.R

2012-09-18  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Keep consistency of const modifier to const char*

	* src/RS-DBI.c
